[gd_scene load_steps=3 format=3 uid="uid://bba5o3t2xufxm"]

[ext_resource type="Script" path="res://scripts/entities_scripts/players_scripts/player_stats_component.gd" id="1_1867d"]
[ext_resource type="StyleBox" uid="uid://d2ei8dgmfqtfn" path="res://resources/progress_bar_style/shield_progress_bar_fill.tres" id="2_esmen"]

[node name="PlayerStatsComponent" type="Node2D"]
script = ExtResource("1_1867d")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
z_index = 1
offset_left = -10.0
offset_top = -29.0
offset_right = 190.0
offset_bottom = -9.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 8
max_value = 200.0
value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="ShieldBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
z_index = 1
offset_left = -10.0
offset_top = -27.0
offset_right = 190.0
offset_bottom = -17.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 8
theme_override_styles/fill = ExtResource("2_esmen")
max_value = 200.0
value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="ManaBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(0.301961, 0.301961, 1, 1)
z_index = 1
offset_left = -10.0
offset_top = 4.0
offset_right = 190.0
offset_bottom = 24.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 8
max_value = 200.0
value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="StaminaBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(1, 0.501961, 0, 1)
z_index = 1
offset_left = -10.0
offset_top = 6.0
offset_right = 190.0
offset_bottom = 21.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 8
max_value = 200.0
value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true
